analytics page: lead part done

--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/get-file": "^3.12.0",
+    "@react-pdf-viewer/print": "^3.12.0",
     "@tailwindcss/vite": "^4.0.5",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.5",
     "react-world-flags": "^1.6.0",
+    "recharts": "^2.15.1",
     "shadcn-ui": "^0.9.4",
     "tailwindcss": "^4.0.5"
   },
