--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-pdf-viewer/get-file": "^3.12.0",
     "@react-pdf-viewer/print": "^3.12.0",
     "@tailwindcss/vite": "^4.0.5",
+    "axios": "^1.9.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
