feature: image add and main set on update

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_GETALL_LISTING = http://3.111.31.34/api/listings
-VITE_LOGOUT = http://3.111.31.34/api/logout
+VITE_GETALL_LISTING = https://backend.myemirateshome.com/api/listings
+VITE_LOGOUT = https://backend.myemirateshome.com/api/logout
